bretti nafni á Http requst

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,11 @@
         <activity
             android:name=".Activity.EditEventActivity"
             android:label="@string/title_activity_edit_event"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activity.prufaActivity"
+            android:label="@string/title_activity_prufa"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
