ForgotPasswordActivity og ResetPasswordActivity, á eftir að klára

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
             android:name=".Activity.prufaActivity"
             android:label="@string/title_activity_prufa"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activity.ResetPasswordActivity"
+            android:label="@string/title_activity_reset_password"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
